crates/swc_ecma_parser/tests/test262-error-references/fail/ca424e812e0896bd.js.stderr
error: Expected ',', got '.'
 --> $DIR/tests/test262-parser/fail/ca424e812e0896bd.js:1:15
  |
1 | (function* ([a.b]) {})
  |               ^

